Fixed Play/Pause button placement on smaller iOS devices

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -32,6 +32,7 @@
 	margin: 0;
 	margin-bottom: 10px !important;
 	width: 100%;
+	border: none !important;
 }
 
 .pane { 
